@startuml System
!define ER_ENTITY(name) class name


ER_ENTITY(User)
class User {
    + PK id : UUID
    --
    name : String
    phoneNumber : String
    email : String
}

ER_ENTITY(Address)
class Address {
    + PK id : UUID
    --
    city : String
    neighborhood : String
    street : String
    number : String
    complement : String
    --
    FK owner_id : UUID
}

ER_ENTITY(Order)
class Order {
    + PK id : UUID
    --
    status : String
    requestDate : LocalDateTime
    dateToDeliver : LocalDateTime
    --
    FK user_id : UUID
    FK address_id : UUID
}

ER_ENTITY(Basket)
class Basket {
    + PK id : UUID
    --
    name : String
    price : Double
    description : String
    photoId : String
}

ER_ENTITY(Order_Basket)
class Order_Basket {
    + PK order_id : UUID
    + PK basket_id : UUID
}



User ||--o{ Address : owns
User ||--o{ Order : places

Address ||--o{ Order : delivery_place

Order ||--o{ Order_Basket : contains >
Basket ||--o{ Order_Basket : part_of >

@enduml